Atualização do notebook com as soluções dos exercícios do checkpoint.

--- a/alura/python-basics/Hora da pratica-checkpoint.ipynb
+++ b/alura/python-basics/Hora da pratica-checkpoint.ipynb
@@ -35,13 +35,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "id": "5pllxJ0h0-yA"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Escola de Dados da Alura!\n"
+     ]
+    }
+   ],
    "source": [
-    "print:\"Escola de Dados da Alura!\""
+    "print(\"Escola de Dados da Alura!\")"
    ]
   },
   {
@@ -60,13 +68,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "id": "RVw5iKn20_Ps"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nome : Arthur Porto \n",
+      "Sobrenome: Porto\n"
+     ]
+    }
+   ],
    "source": [
-    "print:\"Nome : Arthur Porto /nSobrenome: Porto\""
+    "print(\"Nome : Arthur Porto \\nSobrenome: Porto\")"
    ]
   },
   {
@@ -88,12 +105,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "id": "v5bkrgf60_qx"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "R\n",
+      "T\n",
+      "H\n",
+      "U\n",
+      "R\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in \"ARTHUR\":\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,12 +143,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "id": "cx0KSsrq1ALD"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19 abril 1999\n"
+     ]
+    }
+   ],
+   "source": [
+    "dia = 19\n",
+    "mes = \"abril\"\n",
+    "ano = 1999\n",
+    "print(f\"{dia} {mes} {ano}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -132,12 +178,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "id": "UN77EfQ2d36Y"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ano atual: 2025\n"
+     ]
+    }
+   ],
+   "source": [
+    "ano = 2025\n",
+    "print(f\"Ano atual: {ano}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -169,12 +226,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "id": "dbX1fKqy2HnE"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Olá, Teste\n"
+     ]
+    }
+   ],
+   "source": [
+    "nome=input(\"Insira seu nome: \")\n",
+    "print(\"Olá, \" + nome)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -188,12 +256,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "id": "jKz-0Sq8PFkp"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Olá, Arthur. Você tem 25 anos.\n"
+     ]
+    }
+   ],
+   "source": [
+    "idade = input(\"Insira sua idade: \")\n",
+    "nome = input(\"Insira seu nome: \")\n",
+    "print(f\"Olá, {nome}. Você tem {idade} anos.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -207,12 +287,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "id": "pI4kHNzTPIXh"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Olá, Arthur. Você tem 25 anos e 1,75 de altura.\n"
+     ]
+    }
+   ],
+   "source": [
+    "nome = input(\"Insira seu nome: \")\n",
+    "idade = input(\"Insira sua idade: \")\n",
+    "altura = input(\"Insira sua altura: \")\n",
+    "print(f\"Olá, {nome}. Você tem {idade} anos e {altura} de altura.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -236,12 +329,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "id": "Zb0W84sy8rnp"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Soma: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1, num2 = input(\"Insira dois números, separados por espaço: \").split()\n",
+    "print(f\"Soma: {int(num1) + int(num2)}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -255,12 +359,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "id": "4FYjWyBS8rDm"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Soma: 41\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1, num2, num3 = input(\"Insira três números, separados por espaço: \").split()\n",
+    "print(f\"Soma: {int(num1) + int(num2) + int(num3)}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -274,12 +389,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "id": "k0GE1z4w8p3J"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Substração: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1, num2 = input(\"Insira dois números, separados por espaço: \").split()\n",
+    "print(f\"Substração: {int(num1) - int(num2)}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -298,8 +424,19 @@
    "metadata": {
     "id": "GzFCVHfp8peZ"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "multiplicação: 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1, num2 = input(\"Insira dois números, separados por espaço: \").split()\n",
+    "print(f\"Multiplicação: {int(num1) * int(num2)}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -314,12 +451,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "id": "ytJ8l5KH8ozc"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Divisão: 1.6666666666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1, num2 = input(\"Insira dois números, separados por espaço: \").split()\n",
+    "print(f\"Divisão: {int(num1) / int(num2)}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -334,12 +482,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "id": "RPj36jq08oZp"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exponenciação: 16\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1, num2 = input(\"Insira dois números, separados por espaço: \").split()\n",
+    "print(f\"Exponenciação: {int(num1) ** int(num2)}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -353,12 +512,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "id": "UHK8xITf8oCg"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Divisão inteira: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1, num2 = input(\"Insira dois números, separados por espaço, o segundo não pode ser 0: \").split()\n",
+    "print(f\"Divisão inteira: {int(num1) // int(num2)}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -373,12 +543,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "id": "EWGJeukO8nqx"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resto da divisão: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1, num2 = input(\"Insira dois números, separados por espaço, o segundo não pode ser 0: \").split()\n",
+    "print(f\"Resto da divisão: {int(num1) % int(num2)}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -393,12 +574,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "id": "H6F4Ojzt8nSR"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Média: 15.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "nota1, nota2, nota3 = input(\"Insira três notas, separadas por espaço: \").split()\n",
+    "print(f\"Média: {(float(nota1) + float(nota2) + float(nota3)) / 3}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -413,12 +605,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "id": "fwjoHlV48mkv"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Média Ponderada: 14.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "media = [5, 12, 20, 15]\n",
+    "peso = [1, 2, 3, 4]\n",
+    "print(f\"Média Ponderada: {(media[0]*peso[0] + media[1]*peso[1] + media[2]*peso[2] + media[3]*peso[3]) / (sum(peso))}\")  "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -442,12 +646,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "id": "eRqr_gh-8mFy"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Escola de Dados da Alura\n"
+     ]
+    }
+   ],
+   "source": [
+    "frase = \"Escola de Dados da Alura\"\n",
+    "print(frase)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -461,12 +676,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "id": "8zfE2hh98lb0"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Teste\n"
+     ]
+    }
+   ],
+   "source": [
+    "frase = input(\"Insira uma frase: \")\n",
+    "print(frase)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -481,12 +707,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "id": "d0VzoYP68k-I"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TESTE\n"
+     ]
+    }
+   ],
+   "source": [
+    "frase = input(\"Insira uma frase: \").upper()\n",
+    "print(frase)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -501,12 +738,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "KD8rNy2K8kox"
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "teste\n"
+     ]
+    }
+   ],
+   "source": [
+    "frase = input(\"Insira uma frase: \").lower()\n",
+    "print(frase)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -521,12 +767,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "id": "aSCpdF-o8kBs"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Escola de Dados da Alura\n"
+     ]
+    }
+   ],
+   "source": [
+    "frase = \" Escola de Dados da Alura \".strip()\n",
+    "print(frase)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -541,12 +798,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "tHunjwuG8jNq"
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "asojdlaksjd\n"
+     ]
+    }
+   ],
+   "source": [
+    "frase = input(\"Insira uma frase: \").strip()\n",
+    "print(frase)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -562,12 +828,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "id": "DYm0_UwS8ih6"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aasdahsdkjh\n"
+     ]
+    }
+   ],
+   "source": [
+    "frase = input(\"Insira uma frase: \").strip().lower()\n",
+    "print(frase)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -582,12 +859,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "id": "k64C5G5S8iLO"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Escola df Dados Alura\n"
+     ]
+    }
+   ],
+   "source": [
+    "frase = input(\"Insira uma frase: \").replace(\"e\", \"f\")\n",
+    "print(frase)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -603,12 +891,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "id": "msaDNm_p8h0D"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Escol@ de D@dos Alur@\n"
+     ]
+    }
+   ],
+   "source": [
+    "frase = input(\"Insira uma frase: \").replace(\"a\", \"@\")\n",
+    "print(frase)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -624,12 +923,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "id": "RPBIsWT68e-1"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "E$cola de Dado$ Alura\n"
+     ]
+    }
+   ],
+   "source": [
+    "frase = input(\"Insira uma frase: \").replace(\"s\", \"$\")\n",
+    "print(frase)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -661,12 +971,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "id": "GJlGnzjc-xyF"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número maior: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1, num2 = input(\"Insira dois números, separados por espaço: \").split()\n",
+    "if num1 > num2:\n",
+    "    print(f\"Número maior: {num1}\")\n",
+    "else:\n",
+    "    print(f\"Número maior: {num2}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -680,12 +1004,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "id": "-2_Ry5XJ-yZW"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "População crescente\n"
+     ]
+    }
+   ],
+   "source": [
+    "percentual_crescimento = input(\"Insira o percentual de crescimento anual (em %): \")\n",
+    "if float(percentual_crescimento) > 0:\n",
+    "    print(\"População crescente\")\n",
+    "elif float(percentual_crescimento) < 0:\n",
+    "    print(\"População decrescente\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -699,12 +1037,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "id": "NbgndVyg-zFJ"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Não é uma letra\n"
+     ]
+    }
+   ],
+   "source": [
+    "letra = input(\"Insira uma letra: \").lower()\n",
+    "if letra in \"aeiou\":\n",
+    "    print(\"Vogal\")\n",
+    "elif letra in \"bcdfghjklmnpqrstvwxyz\":\n",
+    "    print(\"Consoante\")\n",
+    "else:\n",
+    "    print(\"Não é uma letra\")"
+   ]
   },
   {
    "cell_type": "markdown",
