Atualizando .gitignore e fazendo o código em Hora da pratica-checkpoint.ipynb

--- a/alura/python-basics/Hora da pratica-checkpoint.ipynb
+++ b/alura/python-basics/Hora da pratica-checkpoint.ipynb
@@ -1072,12 +1072,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "TX--d3k9-02c"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maior valor: 19\n"
+     ]
+    }
+   ],
+   "source": [
+    "valor1, valor2, valor3 = input(\"Insira três valores, separados por espaço: \").split()\n",
+    "if valor1 >= valor2 and valor1 >= valor3:\n",
+    "    print(f\"Maior valor: {valor1}\")\n",
+    "elif valor2 >= valor1 and valor2 >= valor3:\n",
+    "    print(f\"Maior valor: {valor2}\")\n",
+    "else:\n",
+    "    print(f\"Maior valor: {valor3}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1091,12 +1107,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "sYqNh9df-0gk"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Menor valor: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "valor1, valor2, valor3 = input(\"Insira três valores, separados por espaço: \").split()\n",
+    "if valor1 <= valor2 and valor1 <= valor3:\n",
+    "    print(f\"Menor valor: {valor1}\")\n",
+    "elif valor2 <= valor1 and valor2 <= valor3:\n",
+    "    print(f\"Menor valor: {valor2}\")\n",
+    "else:\n",
+    "    print(f\"Menor valor: {valor3}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1110,12 +1142,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "ydOCYUMO-0Hk"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.0\n",
+      "2.5\n",
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1, num2, num3 = map(float,input(\"Insira três números, separados por espaço: \").split())\n",
+    "if num1 >= num2 and num1 >= num3:\n",
+    "    print(f\"{num1}\")\n",
+    "    if num2 >= num3:\n",
+    "        print(f\"{num2}\")\n",
+    "        print(f\"{num3}\")\n",
+    "    else:\n",
+    "        print(f\"{num3}\")\n",
+    "        print(f\"{num2}\")\n",
+    "elif num2 >= num3 and num2 >= num1:\n",
+    "    print(f\"{num2}\")\n",
+    "    if num1 >= num3:\n",
+    "        print(f\"{num1}\")\n",
+    "        print(f\"{num3}\")\n",
+    "    else:\n",
+    "        print(f\"{num3}\")\n",
+    "        print(f\"{num1}\")\n",
+    "else:\n",
+    "    print(f\"{num3}\")\n",
+    "    if num1 >= num2:\n",
+    "        print(f\"{num1}\")\n",
+    "        print(f\"{num2}\")\n",
+    "    else:\n",
+    "        print(f\"{num2}\")\n",
+    "        print(f\"{num1}\")       "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1134,7 +1202,17 @@
     "id": "-_q-Pcr_-zth"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "turno = input(\"Insira o turno que você estuda (M/V/N): \").upper()\n",
+    "if turno == \"M\":\n",
+    "    print(\"Bom dia!\")\n",
+    "elif turno == \"V\":\n",
+    "    print(\"Boa tarde!\")\n",
+    "elif turno == \"N\":\n",
+    "    print(\"Boa noite!\")\n",
+    "else:\n",
+    "    print(\"Valor inválido!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1148,12 +1226,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "OmZJt1nQ-3e6"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número ímpar\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = input(\"Insira um número: \")\n",
+    "if int(num1) % 2 == 0:\n",
+    "    print(\"Número par\")\n",
+    "else:\n",
+    "    print(\"Número ímpar\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1171,8 +1263,32 @@
    "metadata": {
     "id": "sLMlZcx8-20N"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O número é decimal.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num1 = float(input(\"Insira um número: \"))\n",
+    "if num1 == int(num1):\n",
+    "    print(\"O número é inteiro.\")\n",
+    "else:\n",
+    "    print(\"O número é decimal.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1195,12 +1311,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "id": "3jmahZ0f-2gq"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O número é par, positivo e decimal.\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = float(input(\"Insira um número: \"))\n",
+    "if int(num1) % 2 == 0:\n",
+    "    t1 = \"par\"\n",
+    "else:\n",
+    "    t1 = \"ímpar\"\n",
+    "if int(num1) > 0:\n",
+    "    t2 = \"positivo\"\n",
+    "elif int(num1) < 0:\n",
+    "    t2 = \"negativo\"\n",
+    "else:\n",
+    "    t2 = \"neutro\"\n",
+    "if num1 == int(num1):\n",
+    "    t3 = \"inteiro\"\n",
+    "else:\n",
+    "    t3 = \"decimal\"\n",
+    "print(f\"O número é {t1}, {t2} e {t3}.\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1218,12 +1359,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "id": "0z73sqUO-2Pw"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Triângulo equilátero\n"
+     ]
+    }
+   ],
+   "source": [
+    "lado1, lado2, lado3 = map(float,input(\"Insira os três lados do triângulo, separados por espaço: \").split())\n",
+    "if lado1 < lado2 + lado3 and lado2 < lado1 + lado3 and lado3 < lado1 + lado2:\n",
+    "    if lado1 == lado2 == lado3:\n",
+    "        print(\"Triângulo equilátero\")\n",
+    "    elif lado1 == lado2 or lado1 == lado3 or lado2 == lado3:\n",
+    "        print(\"Triângulo isósceles\")\n",
+    "    else:\n",
+    "        print(\"Triângulo escaleno\")\n",
+    "else:\n",
+    "    print(\"Não forma um triângulo\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1240,12 +1400,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "id": "9izoF-0O-1yD"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valor a pagar: R$ 29.18\n"
+     ]
+    }
+   ],
+   "source": [
+    "litros = float(input(\"Insira a quantidade de litros vendidos: \"))\n",
+    "tipo = input(\"Insira o tipo de combustível (E - etanol, D - diesel): \").upper()\n",
+    "if tipo == \"E\":\n",
+    "    preco = 1.90\n",
+    "    if litros < 15:\n",
+    "        desconto = 0.02\n",
+    "    else:\n",
+    "        desconto = 0.04\n",
+    "elif tipo == \"D\":\n",
+    "    preco = 2.00\n",
+    "    if litros < 15:\n",
+    "        desconto = 0.03\n",
+    "    else:\n",
+    "        desconto = 0.05\n",
+    "total = litros * preco\n",
+    "print (f\"Valor a pagar: R$ {total - (litros * preco * (desconto)):.2f}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1304,12 +1489,22 @@
    "metadata": {
     "id": "ID1oc1hxJRdQ"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n"
+     ]
+    }
+   ],
    "source": [
-    "from math import isqrt\n",
-    "from sys import excepthook\n",
-    "\n",
-    "num_a, num_b = map(int, input('Innsira 2 numeros').split())\n",
+    "num_a, num_b = map(int, input('Insira 2 numeros').split())\n",
     "for i in range(min(num_a, num_b)+1, max(num_a, num_b)):\n",
     "    print(i)"
    ]
@@ -1326,11 +1521,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "id": "wM6FJuoqJRdR"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Levará 63 dias para a colônia A alcançar ou ultrapassar a colônia B.\n",
+      "No final: Colônia A = 25.75, Colônia B = 25.55\n"
+     ]
+    }
+   ],
    "source": [
     "colonia_a = 4\n",
     "colonia_b = 10\n",
