--- a/alura/python-basics/Hora da pratica-checkpoint.ipynb
+++ b/alura/python-basics/Hora da pratica-checkpoint.ipynb
@@ -1448,12 +1448,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "id": "avQrYlUg-w8f"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variação de -20.00%.\n",
+      "Corte de gastos.\n"
+     ]
+    }
+   ],
+   "source": [
+    "vendas_22, vendas_23 = map(float, input(\"Insira as vendas de 2022 e 2023, separadas por espaço: \").split())\n",
+    "variacao = ((vendas_23 - vendas_22) / vendas_22) * 100\n",
+    "print(f\"Variação de {variacao:.2f}%.\")\n",
+    "if variacao > 20:\n",
+    "    print(\"Bonificação para a equipe de vendas.\")\n",
+    "elif variacao > 2 and variacao <= 20:\n",
+    "    print(\"Pequena bonificação para a equipe de vendas.\")\n",
+    "elif variacao >= -10 and variacao <= 2:\n",
+    "    print(\"Planejamento de políticas de incentivo às vendas.\")\n",
+    "else:\n",
+    "    print(\"Corte de gastos.\")"
+   ]
   },
   {
    "cell_type": "markdown",
