Atividade: Hora da Prática - Checkpoint

--- a/alura/python-basics/Hora da pratica-checkpoint.ipynb
+++ b/alura/python-basics/Hora da pratica-checkpoint.ipynb
@@ -1897,12 +1897,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "ge3LuFhLMgeD"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Média de gastos: R$ 3144.22\n"
+     ]
+    }
+   ],
+   "source": [
+    "gastos = [2172.54, 3701.35, 3518.09, 3456.61, 3249.38, 2840.82, 3891.45, 3075.26, 2317.64, 3219.08]\n",
+    "print(f'Média de gastos: R$ {sum(gastos)/len(gastos):.2f}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1916,12 +1927,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "Ygu5TMZyMgeD"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Foram 7 gastos acima de R$ 3.000,00, correspondente à 70.00% do total.\n"
+     ]
+    }
+   ],
+   "source": [
+    "gastos_acima = 0\n",
+    "for i in gastos:\n",
+    "    if i > 3000:\n",
+    "        gastos_acima += 1\n",
+    "print(f'Foram {gastos_acima} gastos acima de R$ 3.000,00, correspondente à {gastos_acima/len(gastos)*100:.2f}% do total.')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1935,12 +1960,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "vtM9O1hLMgeD"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número inválido\n",
+      "Números inseridos: [1, 4, 5, 6, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = []\n",
+    "for i in range(5):\n",
+    "    while True:\n",
+    "        num = input('Insira um número: ').strip()\n",
+    "        try:\n",
+    "           lista.append(int(num))\n",
+    "           break\n",
+    "        except ValueError:\n",
+    "            print('Número inválido')\n",
+    "print(f'Números inseridos: {lista}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1954,12 +1999,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "id": "-CGwMIyHMgeD"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = []\n",
+    "for i in range(5):\n",
+    "    while True:\n",
+    "        num = input('Insira um número: ').strip()\n",
+    "        try:\n",
+    "           lista.append(int(num))\n",
+    "           break\n",
+    "        except ValueError:\n",
+    "            print('Número inválido')\n",
+    "for _ in lista[::-1]:\n",
+    "    print(_)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1973,12 +2042,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Números primos até 1000: [2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97, 101, 103, 107, 109, 113, 127, 131, 137, 139, 149, 151, 157, 163, 167, 173, 179, 181, 191, 193, 197, 199, 211, 223, 227, 229, 233, 239, 241, 251, 257, 263, 269, 271, 277, 281, 283, 293, 307, 311, 313, 317, 331, 337, 347, 349, 353, 359, 367, 373, 379, 383, 389, 397, 401, 409, 419, 421, 431, 433, 439, 443, 449, 457, 461, 463, 467, 479, 487, 491, 499, 503, 509, 521, 523, 541, 547, 557, 563, 569, 571, 577, 587, 593, 599, 601, 607, 613, 617, 619, 631, 641, 643, 647, 653, 659, 661, 673, 677, 683, 691, 701, 709, 719, 727, 733, 739, 743, 751, 757, 761, 769, 773, 787, 797, 809, 811, 821, 823, 827, 829, 839, 853, 857, 859, 863, 877, 881, 883, 887, 907, 911, 919, 929, 937, 941, 947, 953, 967, 971, 977, 983, 991, 997]\n"
+     ]
+    }
+   ],
+   "source": [
+    "primos = []\n",
+    "while True:\n",
+    "    try:\n",
+    "        num = int(input('Insira um número: '))\n",
+    "        if num < 0:\n",
+    "            print('Número inválido')\n",
+    "            continue\n",
+    "        break\n",
+    "    except ValueError:\n",
+    "        print('Número inválido')\n",
+    "\n",
+    "for i in range(2, num + 1):\n",
+    "    primo = True\n",
+    "    for j in range(2, int(i ** 0.5) + 1):\n",
+    "        if i % j == 0:\n",
+    "            primo = False\n",
+    "            break\n",
+    "    if primo:\n",
+    "        primos.append(i)\n",
+    "\n",
+    "print(f'Números primos até {num}: {primos}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {
     "id": "rj_6GHstMgeE"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O número 4 é par e não é primo\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"Insira um número: \"))\n",
+    "if num <= 1:\n",
+    "    print(\"Não é primo (primos são maiores que 1).\")\n",
+    "elif num == 2:\n",
+    "    print(\"O número 2 é primo\")\n",
+    "elif num % 2 == 0:\n",
+    "    print(f\"O número {num} é par e não é primo\")\n",
+    "else:\n",
+    "    primo = True\n",
+    "    limite = int(num ** 0.5)\n",
+    "    for i in range(3, limite + 1, 2):\n",
+    "        if num % i == 0:\n",
+    "            primo = False\n",
+    "            break\n",
+    "    if primo:\n",
+    "        print(f\"O número {num} é primo\")\n",
+    "    else:\n",
+    "        print(f\"O número {num} não é primo\")"
+   ]
   },
   {
    "cell_type": "markdown",
