--- a/alura/python-para-data-science/2-funções-estruturas-de-dados-e-exceções/Hora da prática.ipynb
+++ b/alura/python-para-data-science/2-funções-estruturas-de-dados-e-exceções/Hora da prática.ipynb
@@ -250,7 +250,11 @@
     "id": "Y4ACJ4rEaqQW"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from random import choice\n",
+    "\n",
+    "nome = input('Digite seu nome: ')\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -272,12 +276,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "gR0BNVGoarOv"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['kiwi', 'coco', 'laranja']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from random import choices\n",
+    "\n",
+    "frutas = [\"maçã\", \"banana\", \"uva\", \"pêra\", \n",
+    "          \"manga\", \"coco\", \"melancia\", \"mamão\",\n",
+    "          \"laranja\", \"abacaxi\", \"kiwi\", \"ameixa\"]\n",
+    "\n",
+    "choices(frutas, k=3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -309,12 +332,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "id": "80eu9G8HaswW"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O numero 256 possui raiz inteira com o valor = 16.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "numeros = [2, 8, 15, 23, 91, 112, 256]\n",
+    "resultadoA = []\n",
+    "resultadoB = []\n",
+    "for i in range(len(numeros)):\n",
+    "    if pow(numeros[i], 1/2) // 1 == pow(numeros[i], 1/2):\n",
+    "            print(f'O numero {numeros[i]} possui raiz inteira com o valor = {math.sqrt(numeros[i])}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -330,12 +370,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "id": "VK0RHwYIattI"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O valor da grama para a área de 706.86 m² é R$ 17671.46\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "raio = float(input('Digite o valor do raio: '))\n",
+    "area = math.pi * math.pow(raio, 2)\n",
+    "print(f'O valor da grama para a área de {area:.2f} m² é R$ {area * 25:.2f}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -384,12 +437,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "id": "KrGD5Nl5a1dz"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A lista possui 17 números em que o maior número é 99 e o menor número é 11. A soma dos valores presentes nela é igual a 743, sendo os pares 278 e os ímpares 465.\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = [16, 14, 63, 65, 17, 99, 70, 11, 20, 48, 79, 32, 17, 89, 12, 25, 66]\n",
+    "print(f\"A lista possui {len(lista)} números em que o maior número é {max(lista)} e o menor número é {min(lista)}. A soma dos valores presentes nela é igual a {sum(lista)}, sendo os pares {sum(x for x in lista if x % 2 == 0)} e os ímpares {sum(x for x in lista if x % 2 == 1)}.\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -411,12 +475,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "id": "DxHuhb19a1d0"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 x 0 = 0\n",
+      "7 x 1 = 7\n",
+      "7 x 2 = 14\n",
+      "7 x 3 = 21\n",
+      "7 x 4 = 28\n",
+      "7 x 5 = 35\n",
+      "7 x 6 = 42\n",
+      "7 x 7 = 49\n",
+      "7 x 8 = 56\n",
+      "7 x 9 = 63\n",
+      "7 x 10 = 70\n"
+     ]
+    }
+   ],
+   "source": [
+    "def tabuada(num):\n",
+    "    ''''Função que exibe a tabuada de um número\n",
+    "    num: número inteiro que terá sua tabuada exibida\n",
+    "    return: None\n",
+    "    '''\n",
+    "    for i in range(0, 11):\n",
+    "        print(f'{num} x {i} = {num * i}')\n",
+    "tabuada(int(input('Digite um número para ver sua tabuada: ')))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -436,12 +527,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "id": "kYrKxhd8a1d0"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[24, 99]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista = [97, 80, 94, 88, 80, 1, 16, 53, 62, 32, 24, 99]\n",
+    "\n",
+    "def multiplos_de_tres(n):\n",
+    "    '''Função que retorna os múltiplos de 3 até n\n",
+    "    lista: lista de numeros inteiros\n",
+    "    return: valor iterado multiplos de 3\n",
+    "    '''\n",
+    "    for i in n:\n",
+    "        if i % 3 == 0:\n",
+    "            mult_3.append(i)\n",
+    "    return mult_3\n",
+    "mult_3 = []\n",
+    "multiplos_de_tres(lista)\n",
+    "mult_3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[24, 99]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = [97, 80, 94, 88, 80, 1, 16, 53, 62, 32, 24, 99]\n",
+    "\n",
+    "def eh_multiplo_de_tres(n):\n",
+    "    \"\"\"Retorna True se n for múltiplo de 3\"\"\"\n",
+    "    return n % 3 == 0\n",
+    "\n",
+    "mult_3 = [num for num in lista if eh_multiplo_de_tres(num)]\n",
+    "\n",
+    "print(mult_3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[24, 99]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = [97, 80, 94, 88, 80, 1, 16, 53, 62, 32, 24, 99]\n",
+    "\n",
+    "mult_3 = [num for num in lista if num % 3 == 0]\n",
+    "\n",
+    "print(mult_3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -457,12 +620,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "id": "Iav68EpKa1d0"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista = list(range(1,11))\n",
+    "\n",
+    "quadrado = [x**2 for x in lista]\n",
+    "#quadrado = list(map(lambda x: x**2, lista))\n",
+    "quadrado\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -496,8 +676,22 @@
    "metadata": {
     "id": "1nbQ-hIRa1d0"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nota da manobra é 3.67\n"
+     ]
+    }
+   ],
+   "source": [
+    "notas = list(map(float, input('Digite as 5 notas separadas por espaço: ').split()))\n",
+    "notas.sort()\n",
+    "notas = notas[1:-1]\n",
+    "media = sum(notas) / len(notas)\n",
+    "print(f'Nota da manobra é {media:.2f}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -525,8 +719,47 @@
    "metadata": {
     "id": "5Bx-K65ya1d0"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O(a) estudante obteve uma media de 3.0, com a sua maior nota de 5.0 pontos e a menor nota de 1.0 pontos e foi REPROVADO\n"
+     ]
+    }
+   ],
+   "source": [
+    "notas = list(map(float, input('Digite as 4 notas separadas por espaço: ').split()))\n",
+    "media = sum(notas) / len(notas)\n",
+    "print(f\"O(a) estudante obteve uma media de {media}, com a sua maior nota de {max(notas)} pontos e a menor nota de {min(notas)} pontos e foi {'APROVADO' if media >= 7 else 'REPROVADO'}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O(a) estudante obteve uma média de 2.50, com a sua maior nota de 4.0 pontos e a menor nota de 1.0 pontos e foi REPROVADO\n"
+     ]
+    }
+   ],
+   "source": [
+    "def analisar_notas(notas):\n",
+    "    maior = max(notas)\n",
+    "    menor = min(notas)\n",
+    "    media = sum(notas) / len(notas)\n",
+    "    situacao = \"APROVADO\" if media >= 7 else \"REPROVADO\"\n",
+    "    return maior, menor, media, situacao\n",
+    "\n",
+    "notas = list(map(float, input('Digite as 4 notas separadas por espaço: ').split()))\n",
+    "\n",
+    "maior, menor, media, situacao = analisar_notas(notas)\n",
+    "print(f\"O(a) estudante obteve uma média de {media:.2f}, com a sua maior nota de {maior} pontos e a menor nota de {menor} pontos e foi {situacao}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -554,12 +787,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {
     "id": "SdPq27E-a1d0"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['João Silva', 'Maria Souza', 'José Tavares']"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nomes = [\"joão\", \"MaRia\", \"JOSÉ\"]\n",
+    "sobrenomes = [\"SILVA\", \"souza\", \"Tavares\"]\n",
+    "def correcao (x):\n",
+    "    return x.lower().capitalize()    \n",
+    "nome_completo = [correcao(n) + \" \" + correcao(s) for n, s in zip(nomes,sobrenomes)]\n",
+    "\n",
+    "nome_completo"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -592,12 +844,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {
     "id": "zxOwouhta1d0"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A pontuação do time foi de 7 e seu aproveitamento foi de 46.67%\n"
+     ]
+    }
+   ],
+   "source": [
+    "gols_marcados = [2, 1, 3, 1, 0]\n",
+    "gols_sofridos = [1, 2, 2, 1, 3]\n",
+    "\n",
+    "def calcula_pontos (marcados,sofridos):\n",
+    "    return 3 * (marcados > sofridos) + 1 * (marcados == sofridos)\n",
+    "    \n",
+    "\n",
+    "resultado = sum(calcula_pontos (x,y) for x, y in zip(gols_marcados, gols_sofridos))\n",
+    "max_pontos = len(gols_marcados) * 3\n",
+    "aproveitamento = resultado/max_pontos\n",
+    "print(f\"A pontuação do time foi de {resultado} e seu aproveitamento foi de {aproveitamento*100:.2f}%\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -625,8 +897,53 @@
    "metadata": {
     "id": "VQyaLsnWa1d0"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Com base nos gastos definidos, uma viagem de 4 dias para Salvador saindo de Recife custaria R$ 2007.14 reais\n"
+     ]
+    }
+   ],
+   "source": [
+    "DIARIA_HOTEL = 150\n",
+    "CONSUMO_KM_L = 14\n",
+    "PRECO_LITRO = 5\n",
+    "\n",
+    "def gasto_hotel (dias):\n",
+    "    return diaria_hotel*dias\n",
+    "\n",
+    "def gasto_gasolina (kms):\n",
+    "    litros = 2*kms/consumo_km_l\n",
+    "    return litros * preco_litro\n",
+    "\n",
+    "def gasto_passeio (gastos, dias):\n",
+    "    return gastos*dias\n",
+    "\n",
+    "cidades = [\"Salvador\", \"Fortaleza\", \"Natal\", \"Aracaju\"]\n",
+    "gastos = [200, 400, 250, 300]\n",
+    "kms = [850, 800, 300, 550]\n",
+    "DADOS = {\n",
+    "    cidade: {\"km\": km, \"gasto_dia\": gasto}\n",
+    "    for cidade, km, gasto in zip(cidades, kms, gastos)\n",
+    "}\n",
+    "\n",
+    "destino = input('Você vai viajar para qual localização?').strip().title()\n",
+    "if destino in DADOS:\n",
+    "    info = DADOS[destino]\n",
+    "    gasto_destino = info[\"gasto_dia\"]\n",
+    "    km_destino = info[\"km\"]\n",
+    "else:\n",
+    "    print(\"Destino inválido. Opções:\", \", \".join(DADOS.keys()))\n",
+    "    raise SystemExit\n",
+    "\n",
+    "dias = int(input('Por quantos dias?'))\n",
+    "\n",
+    "gasto_total = gasto_hotel(dias) + gasto_gasolina(km_destino) + gasto_passeio(gasto_destino, dias)\n",
+    "\n",
+    "print(f\"Com base nos gastos definidos, uma viagem de {dias} dias para {destino} saindo de Recife custaria R$ {gasto_total:.2f} reais\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
